--- a/recipes.html
+++ b/recipes.html
@@ -1,5 +1,12 @@
-<html>
-    <body>
-        <!--This is to for the basic HTML boilerplate :)-->
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="'ie-edge">
+    <title>The Recipes Project</title>
+</head>
+<body>
+    
+</body>
 </html>
